BAU: tweak non-full page banner and fix contrast

--- a/app/assets/main.scss
+++ b/app/assets/main.scss
@@ -171,15 +171,20 @@ $app-destructive-link-active-colour: $govuk-text-colour;
 .app-test-data-banner__inverse {
     // https://github.com/alphagov/govuk-frontend/blob/b5884bcede951779c3e166f9bf3420f0e7f4ee4a/packages/govuk-frontend/src/govuk/settings/_colours-palette.scss#L77
     box-shadow: 0 2px 0 #7a3c1c;
-    color: govuk-colour("orange") !important;
 
-    // a darker button colour if the orange from the background is too bright
-    // color: #7a3c1c !important;
+    // a darker button colour because the background contrast is too high
+    color: #b7592a !important;
 }
 
 .app-test-data-banner__tag {
     color: white;
     flex-grow: 1;
+}
+
+.app-test-data-banner--standalone {
+    margin-top: govuk-spacing(2);
+    background-color: govuk-colour("orange");
+    padding: 15px 15px;
 }
 
 // Fix for GOV.UK Accessible Autocomplete arrown ot being visible: https://github.com/alphagov/accessible-autocomplete/issues/351
